Fix spacing of notices & make sure the text is the right color.
The added notice element was breaking flex layout on subscription rows, this sets it to a new row, under the subscription details, at full-width. No effect for containers that aren’t using flexbox.

--- a/client/components/notice/style.scss
+++ b/client/components/notice/style.scss
@@ -3,6 +3,7 @@
 @import '../../scss/extends';
 
 .notice {
+	flex: 1 100%;
 	position: relative;
 	margin-bottom: 24px;
 	padding: 11px 24px;
@@ -35,6 +36,10 @@
 			font-size: 24px;
 			line-height: 1;
 		}
+	}
+
+	span {
+		color: inherit !important;
 	}
 
 	// Success!
